--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+color-eyre = "0.6.3"
 comfy-table = "7.1.1"
 crossterm = "0.27.0"
 ratatui = "0.26.3"
@@ -11,3 +12,4 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 term-table = "1.3.2"
 thiserror = "1.0.61"
+tui-widget-list = "0.9.0"
