--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ ratatui = "0.26.3"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 thiserror = "1.0.61"
+tui-textarea = "0.4.0"
