--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ crossterm = "0.27.0"
 ratatui = "0.26.3"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+strum = "0.26.3"
 thiserror = "1.0.61"
 tui-textarea = "0.4.0"
